--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "require": {
         "vlucas/phpdotenv": "^5.4",
         "hisorange/browser-detect": "^4.4",
-        "catfan/medoo": "^2.1"
+        "catfan/medoo": "^2.1",
+        "fakerphp/faker": "^1.17"
     },
 
     "autoload": {
